src_old/objects/Project__c.object
<CustomObject>
    <description>Project is the primary container that is used to define work within the system. Project is related to Program, Cycle, Job, Project Account, Project Location, Project Service, and Project Type.</description>
    <fields>
        <fullName>AccountSplitSUM__c</fullName>
        <label>Sum Of Account Split</label>
        <summarizedField>ProjectAccount__c.SplitValue__c</summarizedField>
        <summaryForeignKey>ProjectAccount__c.Project__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>AddLocationsLeadTime__c</fullName>
        <formula>ProjectType__r.AddLocationsLeadTime__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>AddLocationsLeadTime</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>AllowReattempt__c</fullName>
        <formula>ProjectType__r.AllowReattempt__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Allow Reattempt</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>AllowTeamManagement__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Allow Team Management in OneHub Mobile</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>AllowedRescheduleDates__c</fullName>
        <label>Allowed Reschedule Dates</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>ApexJobName__c</fullName>
        <description>A field that indicates the apex job name of the Project.</description>
        <inlineHelpText>The apex job name of the project</inlineHelpText>
        <label>ApexJobName</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ApprovalDate__c</fullName>
        <description>A field that indicates the date and time that the Project was approved.</description>
        <inlineHelpText>The date and time that the project was approved.</inlineHelpText>
        <label>Approval Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>ApprovalRequestDate__c</fullName>
        <description>A field that indicates the date and time the Project was last submitted for approval.</description>
        <inlineHelpText>Date and time the project was last submitted for approval.</inlineHelpText>
        <label>Approval Request Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Approval_Status__c</fullName>
        <description>A picklist that indicates whether the Project is approved or rejected.</description>
        <inlineHelpText>Indicates whether the project is approved or rejected.</inlineHelpText>
        <label>Approval Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Approved</fullName>
                </value>
                <value>
                    <fullName>Rejected</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Approver__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>A search field that indicates the user who approved the Project.</description>
        <inlineHelpText>Select the name of the person who will approve the project..</inlineHelpText>
        <label>Approver</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Projects</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ArchiveStatus__c</fullName>
        <label>Archive Status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Pending</fullName>
                </value>
                <value>
                    <fullName>Archived</fullName>
                </value>
                <value>
                    <fullName>Complete</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>BatchProcessId__c</fullName>
        <description>A field that indicates the ID number of the Batch Process for the Project.</description>
        <inlineHelpText>The ID number for the batch process.</inlineHelpText>
        <label>BatchProcessId</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>BillType__c</fullName>
        <label>Bill Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Per Call</fullName>
                </value>
                <value>
                    <fullName>Per Hour</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>BookBudgetedOnly__c</fullName>
        <defaultValue>false</defaultValue>
        <description>A checkbox that indicates whether the Project was book budgeted only.</description>
        <inlineHelpText>If selected, the project was book budgeted only.</inlineHelpText>
        <label>BookBudgetedOnly</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>BookedProjectEndDate__c</fullName>
        <description>A field that indicates the Project End Date when the project was moved to Booked State.</description>
        <inlineHelpText>The project end date when the project was booked</inlineHelpText>
        <label>Booked Project End Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>BookedProjectStartDate__c</fullName>
        <description>A field that indicates the Project Start Date when the project was moved to Booked State.</description>
        <inlineHelpText>The date available to start execution</inlineHelpText>
        <label>Booked Project Start Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>BudgetedLocationsCount__c</fullName>
        <description>An entry field that indicates the number of budgeted locations for the Project.</description>
        <inlineHelpText>Expected number of locations</inlineHelpText>
        <label>Budgeted Locations Count</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>BundleServices__c</fullName>
        <defaultValue>true</defaultValue>
        <description>To bundle services with in the project for a specific location</description>
        <label>Bundle Services</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>CancelReasonComment__c</fullName>
        <description>An entry field that indicates the reason(s) the Project was canceled.</description>
        <inlineHelpText>Enter the reason(s) the project was canceled.</inlineHelpText>
        <label>Cancel Reason Comment</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CancelReason__c</fullName>
        <description>A picklist that indicates reasons that the project was canceled.</description>
        <inlineHelpText>Select the reason the project was canceled.</inlineHelpText>
        <label>Cancel Reason</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Supplier Requested</fullName>
                </value>
                <value>
                    <fullName>Retailer Requested</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                    <default>true</default>
                    <label>Other</label>
                </value>
                <value>
                    <fullName>Item not approved</fullName>
                    <isActive>false</isActive>
                    <label>Item not approved</label>
                </value>
                <value>
                    <fullName>No Capacity</fullName>
                    <isActive>false</isActive>
                    <label>No Capacity</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>ChangeRecordType__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Change Record Type</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>CloneStatus__c</fullName>
        <description>Started,Complete</description>
        <label>Clone Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Started</fullName>
                </value>
                <value>
                    <fullName>Complete</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>ClonedFromProject__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Cloned From Project</label>
        <referenceTo>Project__c</referenceTo>
        <relationshipLabel>Projects (Cloned From Project)</relationshipLabel>
        <relationshipName>Projects1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>DateLaunched__c</fullName>
        <label>Date Launched</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>DateLocationsScheduled__c</fullName>
        <label>DateLocationsScheduled</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>DateReleaseChangesRequested__c</fullName>
        <label>Date Release Changes Requested</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>DaysSinceApprovalRequestCount__c</fullName>
        <description>A field that indicates the number of days since the Project was approved..</description>
        <formula>DATEVALUE(ApprovalRequestDate__c) -  TODAY()</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>The number of days since the project was approved</inlineHelpText>
        <label># Days Since Approval Request Count</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>DetailReportURL__c</fullName>
        <label>Detail Report URL</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>Division__c</fullName>
        <label>Division</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>860-Sams Club Events</fullName>
                </value>
                <value>
                    <fullName>850-Walmart Events</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>EfficiencyMinutesCalculated__c</fullName>
        <label>Efficiency Minutes Calculated</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>EfficiencyMinutesOverride__c</fullName>
        <label>Efficiency Minutes Override</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>EfficiencyMinutes__c</fullName>
        <formula>IF(ISBLANK(EfficiencyMinutesOverride__c), EfficiencyMinutesCalculated__c, EfficiencyMinutesOverride__c)</formula>
        <label>Efficiency Minutes</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>EndDate__c</fullName>
        <description>An entry field that indicates the end date of the Project.</description>
        <inlineHelpText>The last date available to complete execution</inlineHelpText>
        <label>Project End Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>EstimatedMinutesCalculated__c</fullName>
        <formula>IF (OR(StoreCallTimeLimit__c == 0, ISBLANK(StoreCallTimeLimit__c)),  TotalEstimatedMinutes__c, StoreCallTimeLimit__c )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Estimated Minutes Calculated</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ExecutionSLA__c</fullName>
        <description>A field that indicates the percentage of SLA execution for the Project.</description>
        <inlineHelpText>The service level agreement (SLA) approval percentage.</inlineHelpText>
        <label>Execution SLA %</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>ExternalDetailReportURL__c</fullName>
        <label>External Detail Report URL</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>ExternalProjectId__c</fullName>
        <description>A field that indicates the external ID number for the Project.</description>
        <label>External Project Id</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>FulfillmentLeadTime__c</fullName>
        <description>A field that indicates the lead time for fulfillment of the Project.</description>
        <formula>Retailer__r.FulfillmentLeadTime__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>The lead time for fulfillment of the project.</inlineHelpText>
        <label>Fulfillment Lead Time</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>IsCreatedFromOpportunity__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Is Created From Opportunity</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>IsDeleted__c</fullName>
        <defaultValue>false</defaultValue>
        <description>A checkbox that indicates that the Project is deleted.</description>
        <inlineHelpText>If selected, the project is deleted.</inlineHelpText>
        <label>Is Deleted</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>IsExternalProject__c</fullName>
        <defaultValue>false</defaultValue>
        <description>A checkbox that indicates that the Project is external.</description>
        <inlineHelpText>If selected, the project is external.</inlineHelpText>
        <label>Is External Project</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>IsGoback__c</fullName>
        <defaultValue>false</defaultValue>
        <description>A checkbox that indicates that the Project is a &apos;go-back&apos;.</description>
        <inlineHelpText>If selected, the project is a &apos;go-back&apos;.</inlineHelpText>
        <label>Is Go back</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>IsJobManualRegenReqd__c</fullName>
        <defaultValue>false</defaultValue>
        <description>The check box will be set when a the Job Manual has to be generated.</description>
        <inlineHelpText>The check box will be set when a the Job Manual has to be generated.</inlineHelpText>
        <label>Regenerate Job Manual</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>IsLocked__c</fullName>
        <defaultValue>false</defaultValue>
        <description>A checkbox that indicates that the Project is locked</description>
        <inlineHelpText>If selected, the project is locked.</inlineHelpText>
        <label>Is Locked</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>IsOneHubMobile__c</fullName>
        <formula>ProjectType__r.IsOneHubMobile__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Is OneHub Mobile</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>IsPendingChangeReleaseRequest__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Is Pending Change Release Requested</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>IsPendingChanges__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Is Pending Changes</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>IsShowProjectSummaryReport__c</fullName>
        <formula>ProjectType__r.ShowProjectSummaryReport__c</formula>
        <label>IsShow Project Summary Report</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>IsSingleServiceProject__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Is Single Service Project</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>IsSplit__c</fullName>
        <defaultValue>false</defaultValue>
        <description>A checkbox that indicates if the project is split among the accounts.</description>
        <inlineHelpText>If selected, the project is split among accounts.</inlineHelpText>
        <label>Is Split</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>IsVisibleToClient__c</fullName>
        <defaultValue>true</defaultValue>
        <description>Controls project visibility on client dashboards and reports.</description>
        <inlineHelpText>Select to provide the client visibility to project results, including photos.</inlineHelpText>
        <label>Visible to Client</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>JobCancelLeadTime__c</fullName>
        <formula>ProjectType__r.JobCancelLeadTime__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Job Cancel Lead Time</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>KeepAssignment__c</fullName>
        <defaultValue>true</defaultValue>
        <inlineHelpText>Select to have the original rep assignment maintained.</inlineHelpText>
        <label>Keep Assignment</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>LaunchedProjectEndDate__c</fullName>
        <description>A field that indicates the Project End Date when the project was moved to Launched State.</description>
        <inlineHelpText>The project end date when the project was launched</inlineHelpText>
        <label>Launched Project End Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>LaunchedProjectStartDate__c</fullName>
        <description>A field that indicates the Project Start Date when the project was moved to Launched State.</description>
        <inlineHelpText>The project start date when the project was launched</inlineHelpText>
        <label>Launched Project Start Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>LocationTotalCount__c</fullName>
        <description>A field that indicates the count of the locations added to the project.</description>
        <inlineHelpText>The count of the locations added to the project.</inlineHelpText>
        <label>Actual Location Count</label>
        <summaryFilterItems>
            <field>ProjectLocation__c.Status__c</field>
            <operation>notEqual</operation>
            <value>Canceled</value>
        </summaryFilterItems>
        <summaryForeignKey>ProjectLocation__c.Project__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>MaxServiceCount__c</fullName>
        <description>A field that indicates the maximum number of services for the Project.</description>
        <inlineHelpText>The maximum number of services for the project.</inlineHelpText>
        <label>Max Service Count</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>MinServiceCount__c</fullName>
        <description>A field that indicates the  minimum number of services for the Project.</description>
        <inlineHelpText>The minimum number of services for the project.</inlineHelpText>
        <label>Min Service Count</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>NumberOfDays__c</fullName>
        <inlineHelpText>Number of days available to complete project execution at a location</inlineHelpText>
        <label>Number of Days</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>NumberOfJobs__c</fullName>
        <label>Number of Jobs</label>
        <summarizedField>ProjectService__c.NumberOfJobs__c</summarizedField>
        <summaryForeignKey>ProjectService__c.Project__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>NumberofJobsAssigned__c</fullName>
        <label>Number of Jobs Assigned</label>
        <summarizedField>ProjectService__c.NumberOfAssignedJobs__c</summarizedField>
        <summaryForeignKey>ProjectService__c.Project__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>NumberofJobsCanceled__c</fullName>
        <label>Number of Jobs Canceled</label>
        <summarizedField>ProjectService__c.NumberOfCanceledJobs__c</summarizedField>
        <summaryForeignKey>ProjectService__c.Project__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>NumberofJobsClosed__c</fullName>
        <label>Number of Jobs Closed</label>
        <summarizedField>ProjectService__c.NumberOfClosedJobs__c</summarizedField>
        <summaryForeignKey>ProjectService__c.Project__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>NumberofJobsCompleted__c</fullName>
        <label>Number of Jobs Completed</label>
        <summarizedField>ProjectService__c.NumberOfCompletedJobs__c</summarizedField>
        <summaryForeignKey>ProjectService__c.Project__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>NumberofJobsException__c</fullName>
        <label>Number of Jobs Exception</label>
        <summarizedField>ProjectService__c.NumberOfExceptionJobs__c</summarizedField>
        <summaryForeignKey>ProjectService__c.Project__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>NumberofJobsExecuted__c</fullName>
        <label>Number of Jobs Executed</label>
        <summarizedField>ProjectService__c.NumberOfExecutedJobs__c</summarizedField>
        <summaryForeignKey>ProjectService__c.Project__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>NumberofJobsFailedQC__c</fullName>
        <label>Number of Jobs Failed QC</label>
        <summarizedField>ProjectService__c.NumberOfFailedQCJobs__c</summarizedField>
        <summaryForeignKey>ProjectService__c.Project__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>NumberofJobsNotCanceled__c</fullName>
        <label>Number of Jobs Not Canceled</label>
        <summarizedField>ProjectService__c.NumberOfNotCanceledJobs__c</summarizedField>
        <summaryForeignKey>ProjectService__c.Project__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>NumberofJobsOpen__c</fullName>
        <label>Number of Jobs Open</label>
        <summarizedField>ProjectService__c.NumberOfOpenJobs__c</summarizedField>
        <summaryForeignKey>ProjectService__c.Project__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>NumberofJobsPending__c</fullName>
        <label>Number of Jobs Pending</label>
        <summarizedField>ProjectService__c.NumberOfPendingJobs__c</summarizedField>
        <summaryForeignKey>ProjectService__c.Project__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>NumberofJobsReported__c</fullName>
        <label>Number of Jobs Reported</label>
        <summarizedField>ProjectService__c.NumberOfReportedJobs__c</summarizedField>
        <summaryForeignKey>ProjectService__c.Project__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>NumberofJobsRescheduled__c</fullName>
        <label>Number of Jobs Rescheduled</label>
        <summarizedField>ProjectService__c.NumberofJobsRescheduled__c</summarizedField>
        <summaryForeignKey>ProjectService__c.Project__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>NumberofJobsScheduled__c</fullName>
        <label>Number of Jobs Scheduled</label>
        <summarizedField>ProjectService__c.NumberOfScheduledJobs__c</summarizedField>
        <summaryForeignKey>ProjectService__c.Project__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>NumberofJobsStarted__c</fullName>
        <label>Number of Jobs Started</label>
        <summarizedField>ProjectService__c.NumberOfStartedJobs__c</summarizedField>
        <summaryForeignKey>ProjectService__c.Project__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>OneHubRetailerId__c</fullName>
        <description>A field that indicates the ID number of the OneHub retailer.</description>
        <inlineHelpText>The ID number of the OneHub retailer.</inlineHelpText>
        <label>OneHub Retailer Id</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>OperationsTitle__c</fullName>
        <description>A more descriptive project title that provides more information to the field about the project.</description>
        <inlineHelpText>This title is visible to downstream execution systems.</inlineHelpText>
        <label>Operations Title</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Opportunity__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <description>A search field that indicates the name of the opportunity for the Project.</description>
        <label>Opportunity</label>
        <referenceTo>Opportunity</referenceTo>
        <relationshipLabel>Projects</relationshipLabel>
        <relationshipName>Projects</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>OriginID__c</fullName>
        <description>A field that indicates the ID number for the origin of the Project.</description>
        <externalId>true</externalId>
        <label>Origin ID</label>
        <length>50</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>OutofCycleFulfillmentRequest__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Out of Cycle Fulfillment Request</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>OutofCycleFulfillment__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Out of Cycle Fulfillment</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>OverrideAccessLastUpdated__c</fullName>
        <label>Override Access Last Updated</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>OverrideAccountAndServiceAccess__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Override Account And Service Access</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>OwnerId__c</fullName>
        <description>A field that indicates the ID number of the Owner of the Project.</description>
        <formula>Owner:User.Id</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>The ID number of the owner of the project.</inlineHelpText>
        <label>Owner Id</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>OwnerName__c</fullName>
        <description>A field that indicates the name of the Owner of the Project.</description>
        <formula>Owner:User.FirstName + &apos; &apos; + Owner:User.LastName</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>The name of the owner of the project.</inlineHelpText>
        <label>Owner Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ParentProjectID__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>A search field that indicates the ID number of the parent project of the Project.</description>
        <inlineHelpText>Select the ID number of the parent project of the project.</inlineHelpText>
        <label>Parent Project ID</label>
        <referenceTo>Project__c</referenceTo>
        <relationshipLabel>Projects</relationshipLabel>
        <relationshipName>Projects</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>PendingBulkImport__c</fullName>
        <description>This field will indicate if any import job is pending.</description>
        <label>Pending Bulk Import</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Job</fullName>
                </value>
                <value>
                    <fullName>Location</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>PendingJobImportRequest__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Pending Job Import Request</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>PercentCompleted__c</fullName>
        <formula>NumberofJobsCompleted__c /  NumberofJobsNotCanceled__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Completed %</label>
        <precision>18</precision>
        <scale>1</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>PercentExecuted__c</fullName>
        <formula>NumberofJobsExecuted__c /  NumberofJobsNotCanceled__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Executed %</label>
        <precision>18</precision>
        <scale>1</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>PercentFailedQC__c</fullName>
        <formula>NumberofJobsFailedQC__c /  NumberofJobsNotCanceled__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Failed QC %</label>
        <precision>18</precision>
        <scale>1</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>PercentScheduled__c</fullName>
        <formula>NumberofJobsScheduled__c /  NumberofJobsNotCanceled__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Scheduled %</label>
        <precision>18</precision>
        <scale>1</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>PrimaryAccount__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>PrimaryAccount</label>
        <referenceTo>ProjectAccount__c</referenceTo>
        <relationshipLabel>ProjectAccounts</relationshipLabel>
        <relationshipName>ProjectAccounts</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Program__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>A search field that indicates the Program relating to the Project.</description>
        <inlineHelpText>Used to logically group projects for client reporting</inlineHelpText>
        <label>Program</label>
        <referenceTo>Program__c</referenceTo>
        <relationshipLabel>Projects</relationshipLabel>
        <relationshipName>Projects</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ProjectAccountsCount__c</fullName>
        <description>Number of Project Accounts</description>
        <inlineHelpText>Number of Project Accounts</inlineHelpText>
        <label>Project Accounts Count</label>
        <summaryForeignKey>ProjectAccount__c.Project__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>ProjectBuilderId__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Project Builder</description>
        <inlineHelpText>specify the user who is in charge of the project&apos;s definition.</inlineHelpText>
        <label>OwnerBuilder</label>
        <lookupFilter>
            <active>true</active>
            <booleanFilter>1 OR (2 AND 3)</booleanFilter>
            <filterItems>
                <field>$Source.Status__c</field>
                <operation>notEqual</operation>
                <value>Planning</value>
            </filterItems>
            <filterItems>
                <field>User.UserType</field>
                <operation>equals</operation>
                <value>Standard</value>
            </filterItems>
            <filterItems>
                <field>User.IsActive</field>
                <operation>equals</operation>
                <value>True</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>User</referenceTo>
        <relationshipName>ProjectBuilder</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ProjectBuilderName__c</fullName>
        <description>Project  Builder Name</description>
        <formula>ProjectBuilderId__r.FirstName + &apos; &apos; + ProjectBuilderId__r.LastName</formula>
        <inlineHelpText>the user who is in charge of the project&apos;s definition</inlineHelpText>
        <label>Builder Name</label>
        <type>Text</type>
    </fields>
</CustomObject>